[gd_scene load_steps=20 format=3 uid="uid://e6wbtvxigtho"]

[ext_resource type="Script" path="res://scripts/GameController.cs" id="1_cfsw3"]
[ext_resource type="Script" path="res://scripts/UI/Global/VersionText.gd" id="2_ohmy4"]
[ext_resource type="Theme" uid="uid://bnv8uaqyik3sg" path="res://styles/main_theme.tres" id="2_v40hy"]
[ext_resource type="Script" path="res://scripts/UI/Global/PageOpener.gd" id="3_n3kha"]
[ext_resource type="PackedScene" uid="uid://bt82ve604ccni" path="res://scenes/UI/Global/tooltip_shower.tscn" id="3_tuckq"]
[ext_resource type="Script" path="res://scripts/UI/Global/Messages.gd" id="4_5vxlb"]
[ext_resource type="StyleBox" uid="uid://xxd4m0jineq1" path="res://styles/panel1.tres" id="4_l5owv"]
[ext_resource type="PackedScene" uid="uid://goa3xwhj1xkd" path="res://scenes/UI/Global/local_page_button.tscn" id="5_3j2ef"]
[ext_resource type="PackedScene" uid="uid://bew8svk56e5ug" path="res://scenes/UI/Global/global_page_button.tscn" id="5_4h3n8"]
[ext_resource type="Script" path="res://scripts/UI/Global/SettlementPages.gd" id="5_m7htq"]
[ext_resource type="Script" path="res://scripts/UI/Global/GlobalPages.gd" id="6_afytg"]
[ext_resource type="PackedScene" uid="uid://cvgplnlsw8a5i" path="res://scenes/UI/Global/resource_category.tscn" id="7_80wkm"]
[ext_resource type="Script" path="res://scripts/UI/Global/ResourceCategoryList.gd" id="7_ifjgw"]
[ext_resource type="Script" path="res://scripts/UI/Global/ScrollToBottomContainer.gd" id="10_rtdk6"]
[ext_resource type="Script" path="res://scripts/UI/Global/MenuModal.gd" id="11_sjde1"]
[ext_resource type="FontFile" uid="uid://bjenvttwwiow7" path="res://media/fonts/VeraBd.ttf" id="12_70fio"]

[sub_resource type="LabelSettings" id="LabelSettings_1axur"]
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8gths"]
bg_color = Color(0.109804, 0.188235, 0.117647, 0.439216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ru64m"]
bg_color = Color(0.341176, 0.341176, 0.341176, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0
expand_margin_top = 10.0
expand_margin_right = 20.0
expand_margin_bottom = 10.0
shadow_size = 5

[node name="GameController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cfsw3")

[node name="PageOpener" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_v40hy")
script = ExtResource("3_n3kha")

[node name="HeaderGlobalTabsContainer" type="HBoxContainer" parent="PageOpener"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Header" type="Control" parent="PageOpener/HeaderGlobalTabsContainer"]
custom_minimum_size = Vector2(255, 20)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="PageOpener/HeaderGlobalTabsContainer/Header"]
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 37.0
offset_bottom = 36.0
text = "M"

[node name="MainMenuTooltipShower" parent="PageOpener/HeaderGlobalTabsContainer/Header" instance=ExtResource("3_tuckq")]
layout_mode = 0
tooltip_label_text = "Main menu"

[node name="Title" type="Label" parent="PageOpener/HeaderGlobalTabsContainer/Header"]
layout_mode = 2
offset_left = 45.0
offset_top = 5.0
offset_right = 1197.0
offset_bottom = 50.0
text = "Lamia"
label_settings = SubResource("LabelSettings_1axur")

[node name="Version" type="Label" parent="PageOpener/HeaderGlobalTabsContainer/Header"]
layout_mode = 0
offset_left = 145.0
offset_top = 7.0
offset_right = 208.0
offset_bottom = 33.0
text = "v 0.0.0"
script = ExtResource("2_ohmy4")

[node name="MarginContainer" type="MarginContainer" parent="PageOpener/HeaderGlobalTabsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="GlobalPages" type="HBoxContainer" parent="PageOpener/HeaderGlobalTabsContainer/MarginContainer"]
layout_mode = 2
script = ExtResource("6_afytg")

[node name="LocalPageButton" parent="PageOpener/HeaderGlobalTabsContainer/MarginContainer/GlobalPages" instance=ExtResource("5_4h3n8")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PageOpener"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="PrimaryPageWrapper" type="HBoxContainer" parent="PageOpener/MarginContainer"]
layout_mode = 2
script = ExtResource("5_m7htq")

[node name="LocalPageTabsResources" type="VBoxContainer" parent="PageOpener/MarginContainer/PrimaryPageWrapper"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="ResourcesScrollContainer" type="ScrollContainer" parent="PageOpener/MarginContainer/PrimaryPageWrapper/LocalPageTabsResources"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="PageOpener/MarginContainer/PrimaryPageWrapper/LocalPageTabsResources/ResourcesScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ResourceCategoryList" type="VBoxContainer" parent="PageOpener/MarginContainer/PrimaryPageWrapper/LocalPageTabsResources/ResourcesScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 12
script = ExtResource("7_ifjgw")

[node name="ResourceCategory" parent="PageOpener/MarginContainer/PrimaryPageWrapper/LocalPageTabsResources/ResourcesScrollContainer/MarginContainer/ResourceCategoryList" instance=ExtResource("7_80wkm")]
layout_mode = 2

[node name="ResourceCategory2" parent="PageOpener/MarginContainer/PrimaryPageWrapper/LocalPageTabsResources/ResourcesScrollContainer/MarginContainer/ResourceCategoryList" instance=ExtResource("7_80wkm")]
layout_mode = 2

[node name="LocalPageTabsMargin" type="MarginContainer" parent="PageOpener/MarginContainer/PrimaryPageWrapper/LocalPageTabsResources"]
layout_mode = 2

[node name="LocalPageTabs" type="GridContainer" parent="PageOpener/MarginContainer/PrimaryPageWrapper/LocalPageTabsResources/LocalPageTabsMargin"]
layout_mode = 2
columns = 2

[node name="LocalPageButton" parent="PageOpener/MarginContainer/PrimaryPageWrapper/LocalPageTabsResources/LocalPageTabsMargin/LocalPageTabs" instance=ExtResource("5_3j2ef")]
layout_mode = 2

[node name="PageContainer" type="ScrollContainer" parent="PageOpener/MarginContainer/PrimaryPageWrapper"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PageContainerPanel" type="PanelContainer" parent="PageOpener/MarginContainer/PrimaryPageWrapper/PageContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("4_l5owv")

[node name="PageHolder" type="MarginContainer" parent="PageOpener/MarginContainer/PrimaryPageWrapper/PageContainer/PageContainerPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MarginContainer2" type="MarginContainer" parent="PageOpener"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Messages" type="PanelContainer" parent="PageOpener/MarginContainer2"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_styles/panel = ExtResource("4_l5owv")
script = ExtResource("4_5vxlb")
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="PageOpener/MarginContainer2/Messages"]
layout_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("10_rtdk6")

[node name="VBoxContainer" type="VBoxContainer" parent="PageOpener/MarginContainer2/Messages/ScrollContainer"]
layout_mode = 2

[node name="MessageHistoryList" type="VBoxContainer" parent="PageOpener/MarginContainer2/Messages/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = -3

[node name="MessageList" type="VBoxContainer" parent="PageOpener/MarginContainer2/Messages/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = -3

[node name="MenuModal" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8gths")
script = ExtResource("11_sjde1")

[node name="RestartGameConfirmDialog" type="ConfirmationDialog" parent="MenuModal"]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(309, 102)
borderless = true
dialog_text = "This will delete your save game!
Are you sure?"

[node name="PanelContainer" type="PanelContainer" parent="MenuModal"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ru64m")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuModal/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuModal/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_70fio")
theme_override_font_sizes/font_size = 25
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuModal/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="BackToGameButton" type="Button" parent="MenuModal/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Back To Game"

[node name="RestartGameButton" type="Button" parent="MenuModal/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart Game"

[node name="QuitButton" type="Button" parent="MenuModal/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="mouse_entered" from="PageOpener/HeaderGlobalTabsContainer/Header/MainMenuButton" to="PageOpener/HeaderGlobalTabsContainer/Header/MainMenuTooltipShower" method="_on_show_tooltip"]
[connection signal="mouse_exited" from="PageOpener/HeaderGlobalTabsContainer/Header/MainMenuButton" to="PageOpener/HeaderGlobalTabsContainer/Header/MainMenuTooltipShower" method="_on_hide_tooltip"]
[connection signal="pressed" from="PageOpener/HeaderGlobalTabsContainer/Header/MainMenuButton" to="MenuModal" method="_on_main_menu_button_pressed"]
[connection signal="canceled" from="MenuModal/RestartGameConfirmDialog" to="MenuModal" method="_on_restart_game_confirm_dialog_canceled"]
[connection signal="confirmed" from="MenuModal/RestartGameConfirmDialog" to="MenuModal" method="_on_restart_game_confirm_dialog_confirmed"]
[connection signal="pressed" from="MenuModal/PanelContainer/VBoxContainer/BackToGameButton" to="MenuModal" method="_on_back_to_game_button_pressed"]
[connection signal="pressed" from="MenuModal/PanelContainer/VBoxContainer/RestartGameButton" to="MenuModal" method="_on_restart_game_button_pressed"]
[connection signal="pressed" from="MenuModal/PanelContainer/VBoxContainer/QuitButton" to="MenuModal" method="_on_quit_button_pressed"]
